syntax = "proto3";

package protobuf;

option java_package = "ru.sberbank.lab2.protobuf";
option java_outer_classname = "ComplexProto";

message ComplexDto {
  string id = 1;
  string date = 2;
  User fio = 3;
  Order order = 4;
  double discount = 5;

  message User {
    string firstName = 1;
    string secondName = 2;
    string thirdName = 3;
    bool isAClient = 4;
  }

  message Order {
    string id = 1;
    int64 totalPrice = 2;
    repeated Item items = 3;

    message Item {
      string name = 1;
      int64 price = 2;
    }
  }
}